--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -1,13 +1,31 @@
 input {
-	tcp {
-		port => 5000
+	file {
+		type => "nginx"
+			start_position => "beginning"
+			path => [ "/var/log/nginx/access*.log" ]
 	}
 }
 
 ## Add your filters / logstash plugins configuration here
 
+filter {
+	if [type] == "nginx" {
+		grok {
+			patterns_dir => "/etc/logstash/patterns"
+				match => { "message" => "%{IPORHOST:http_host} %{IPORHOST:remote_addr} - %{USERNAME:remote_user} \[%{HTTPDATE:time_local}\] \"%{WORD:method} %{URIPATHPARAM:request} HTTP/%{NUMBER:http_version}\" %{INT:status} %{INT:body_bytes_sent} %{QS:request_body} %{QS:http_referer} %{QS:http_user_agent} %{QS:http_x_forwarded_for} %{NUMBER:request_time:float} %{NUMBER:upstream_response_time:float}" }
+			remove_tag => ["_grokparsefailure"]
+				add_tag => ["nginx_access"]
+		}
+		geoip {
+			source => "visitor_ip"
+		}
+	}
+}
+
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
+			index => "logstash-nginx-%{+YYYY.MM.dd}"
 	}
+    stdout { codec => rubydebug }
 }
