--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,6 @@ logstash:
   volumes:
     - ./logstash/config:/etc/logstash/conf.d
     - /var/log/nginx/mirrors:/var/log/nginx # change log path here
-  ports:
   links:
     - elasticsearch
 
@@ -16,7 +15,15 @@ kibana:
   build: kibana/
   volumes:
     - ./kibana/config/:/opt/kibana/config/
-  ports:
-    - "5601:5601"
   links:
     - elasticsearch
+
+nginx:
+  image: nginx
+  volumes:
+    - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    - ./nginx/htpasswd:/etc/nginx/htpasswd
+  links:
+    - kibana
+  ports:
+      - "5602:80"
