--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -11,14 +11,29 @@ input {
 filter {
 	if [type] == "nginx" {
 		grok {
-			patterns_dir => "/etc/logstash/patterns"
-				match => { "message" => "%{IPORHOST:http_host} %{IPORHOST:remote_addr} - %{USERNAME:remote_user} \[%{HTTPDATE:time_local}\] \"%{WORD:method} %{URIPATHPARAM:request} HTTP/%{NUMBER:http_version}\" %{INT:status} %{INT:body_bytes_sent} %{QS:request_body} %{QS:http_referer} %{QS:http_user_agent} %{QS:http_x_forwarded_for} %{NUMBER:request_time:float} %{NUMBER:upstream_response_time:float}" }
-			remove_tag => ["_grokparsefailure"]
+				match => { "message" => "%{COMBINEDAPACHELOG}" }
+                remove_tag => ["_grokparsefailure"]
 				add_tag => ["nginx_access"]
+                overwrite => ["message"]
 		}
+
+        mutate {
+            convert => ["response", "integer"]
+            convert => ["bytes", "integer"]
+        }
 		geoip {
-			source => "visitor_ip"
+			source => "clientip"
+            target => "geoip"
 		}
+
+        date {
+            match => [ "timestamp" , "dd/MMM/YYYY:HH:mm:ss Z" ]
+            remove_field => [ "timestamp" ]
+        }
+
+        useragent {
+            source => "agent"
+        }
 	}
 }
 
